[package]
name = "comfy-print"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Non-panicking versions of println! and friends"
repository = "https://github.com/Houtamelo/comfy-print"
readme = "README.md"
keywords = ["println", "debug", "write", "io", "stream"]
categories = ["os", "rust-patterns", "development-tools", "development-tools::debugging"]
exclude = [
    "comfy_print_tests/*",
    ".idea/*"
]

[dependencies]
parking_lot = "0.12.1"

[features]
default = []
async_impl = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]