[package]
name = "comfy-print"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Non-panicking versions of println! and friends. Async implementation."
repository = "https://github.com/Houtamelo/comfy-print"
readme = "README.md"
keywords = ["println", "debug", "write", "io", "stream"]
categories = ["os", "rust-patterns", "development-tools", "development-tools::debugging"]
exclude = [
    "comfy_print_tests/*",
    ".idea/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.parking_lot]
version = "0.12.1"