[package]
name = "comfy_print_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-print = { path = "../../comfy-print" }
rand = "0.8.5"
libc = "0.2.151"

[features]
default = []
async_impl = ["comfy-print/async_impl"]
